force-app/main/default/objects/RTR_Vehicle_Expenses__c/RTR_Vehicle_Expenses__c.object-meta.xml
<CustomObject>
    <label>Vehicle Expense</label>
    <nameField>
        <displayFormat>RVE-{0000}</displayFormat>
        <label>Vehicle Expense Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vehicle Expenses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>