force-app/main/default/objects/RTR_Vehicle_Expenses__c/fields/Kilometer_Reading__c.field-meta.xml
<CustomField>
    <fullName>Kilometer_Reading__c</fullName>
    <label>Kilometer Reading</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>