force-app/main/default/objects/RTR_Vehicle_Expenses__c/fields/RTR_Amount__c.field-meta.xml
<CustomField>
    <fullName>RTR_Amount__c</fullName>
    <inlineHelpText>Including all taxes</inlineHelpText>
    <label>Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>