force-app/main/default/objects/RTR_Vehicle_Expenses__c/fields/RTR_Application_Number__c.field-meta.xml
<CustomField>
    <fullName>RTR_Application_Number__c</fullName>
    <label>Application Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>