force-app/main/default/objects/RTR_Vehicle_Expenses__c/fields/RTR_Bill_to_Attach__c.field-meta.xml
<CustomField>
    <fullName>RTR_Bill_to_Attach__c</fullName>
    <label>Bill to Attach</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>