force-app/main/default/objects/RTR_Vehicle_Expenses__c/fields/RTR_Date__c.field-meta.xml
<CustomField>
    <fullName>RTR_Date__c</fullName>
    <inlineHelpText>Record creation date</inlineHelpText>
    <label>Date</label>
    <type>Date</type>
</CustomField>