force-app/main/default/objects/RTR_Vehicle_Expenses__c/fields/RTR_Description__c.field-meta.xml
<CustomField>
    <fullName>RTR_Description__c</fullName>
    <inlineHelpText>Detail explanation about repair or service.</inlineHelpText>
    <label>Description</label>
    <length>130768</length>
    <type>LongTextArea</type>
</CustomField>