force-app/main/default/objects/RTR_Vehicle_Expenses__c/fields/RTR_Insurance_Company__c.field-meta.xml
<CustomField>
    <fullName>RTR_Insurance_Company__c</fullName>
    <label>Insurance Company</label>
    <length>60</length>
    <type>Text</type>
</CustomField>