force-app/main/default/objects/RTR_Vehicle_Expenses__c/fields/RTR_Next_due_Date__c.field-meta.xml
<CustomField>
    <fullName>RTR_Next_due_Date__c</fullName>
    <label>Next due Date</label>
    <type>Date</type>
</CustomField>