force-app/main/default/objects/RTR_Vehicle_Expenses__c/fields/RTR_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>RTR_Payment_Date__c</fullName>
    <label>Payment Date</label>
    <type>Date</type>
</CustomField>