force-app/main/default/objects/RTR_Vehicle_Expenses__c/fields/RTR_PermitNumber__c.field-meta.xml
<CustomField>
    <fullName>RTR_PermitNumber__c</fullName>
    <label>Permit Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>