force-app/main/default/objects/RTR_Vehicle_Expenses__c/fields/RTR_Policy_Issued_Date__c.field-meta.xml
<CustomField>
    <fullName>RTR_Policy_Issued_Date__c</fullName>
    <label>Policy Issued Date</label>
    <type>Date</type>
</CustomField>