force-app/main/default/objects/RTR_Vehicle_Expenses__c/fields/RTR_Quantity__c.field-meta.xml
<CustomField>
    <fullName>RTR_Quantity__c</fullName>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>