force-app/main/default/objects/RTR_Vehicle_Expenses__c/fields/RTR_Transaction_Id__c.field-meta.xml
<CustomField>
    <fullName>RTR_Transaction_Id__c</fullName>
    <label>Transaction Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>