force-app/main/default/objects/RTR_Vehicle_Expenses__c/fields/RTR_Type_of_Repair__c.field-meta.xml
<CustomField>
    <fullName>RTR_Type_of_Repair__c</fullName>
    <label>Type of Repair</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Engine</fullName>
            </value>
            <value>
                <fullName>Tyers</fullName>
            </value>
            <value>
                <fullName>Wiring</fullName>
            </value>
            <value>
                <fullName>Electronics</fullName>
            </value>
            <value>
                <fullName>Paint</fullName>
            </value>
            <value>
                <fullName>Fabrication</fullName>
            </value>
            <value>
                <fullName>Interior</fullName>
            </value>
            <value>
                <fullName>Battery</fullName>
            </value>
            <value>
                <fullName>Transmission</fullName>
            </value>
            <value>
                <fullName>ECU</fullName>
            </value>
            <value>
                <fullName>Radiator</fullName>
            </value>
            <value>
                <fullName>Exhausts</fullName>
            </value>
            <value>
                <fullName>Customization</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>