force-app/main/default/objects/RTR_Vehicle_Expenses__c/fields/RTR_Vehicle_Mileage__c.field-meta.xml
<CustomField>
    <fullName>RTR_Vehicle_Mileage__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vehicle Mileage</label>
    <referenceTo>Vehicle_Mileage__c</referenceTo>
    <relationshipLabel>Vehicle Expenses</relationshipLabel>
    <relationshipName>Vehicle_Expenses</relationshipName>
    <type>Lookup</type>
</CustomField>