force-app/main/default/objects/RTR_Vehicle_Expenses__c/fields/RTR_Vehicle_Name__c.field-meta.xml
<CustomField>
    <fullName>RTR_Vehicle_Name__c</fullName>
    <label>Vehicle Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>RTR_Vehicle_Master__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>REVA Owned</value>
        </filterItems>
        <filterItems>
            <field>RTR_Vehicle_Master__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>RTR_Vehicle_Master__c</referenceTo>
    <relationshipLabel>Vehicle Expenses</relationshipLabel>
    <relationshipName>Vehicle_Expenses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>