force-app/main/default/objects/RTR_Vehicle_Expenses__c/recordTypes/Road_Tax.recordType-meta.xml
<RecordType>
    <fullName>Road_Tax</fullName>
    <active>true</active>
    <label>Road Tax</label>
</RecordType>