force-app/main/default/objects/RTR_Vehicle_Expenses__c/recordTypes/RTR_Emission_Testing.recordType-meta.xml
<RecordType>
    <fullName>RTR_Emission_Testing</fullName>
    <active>true</active>
    <label>Emission Testing</label>
</RecordType>