force-app/main/default/objects/RTR_Vehicle_Expenses__c/recordTypes/RTR_FASTag.recordType-meta.xml
<RecordType>
    <fullName>RTR_FASTag</fullName>
    <active>true</active>
    <label>FASTag</label>
</RecordType>