force-app/main/default/objects/RTR_Vehicle_Expenses__c/recordTypes/RTR_Fitness_Certificate.recordType-meta.xml
<RecordType>
    <fullName>RTR_Fitness_Certificate</fullName>
    <active>true</active>
    <label>Fitness Certificate</label>
</RecordType>