force-app/main/default/objects/RTR_Vehicle_Expenses__c/recordTypes/RTR_Fuel.recordType-meta.xml
<RecordType>
    <fullName>RTR_Fuel</fullName>
    <active>true</active>
    <label>Fuel</label>
</RecordType>