force-app/main/default/objects/RTR_Vehicle_Expenses__c/recordTypes/RTR_Insurance.recordType-meta.xml
<RecordType>
    <fullName>RTR_Insurance</fullName>
    <active>true</active>
    <label>Insurance</label>
</RecordType>