force-app/main/default/objects/RTR_Vehicle_Expenses__c/recordTypes/RTR_Repair_and_maintenance.recordType-meta.xml
<RecordType>
    <fullName>RTR_Repair_and_maintenance</fullName>
    <active>true</active>
    <label>Repair and Maintenance</label>
</RecordType>