force-app/main/default/objects/RTR_Vehicle_Expenses__c/recordTypes/RTR_Road_Permit.recordType-meta.xml
<RecordType>
    <fullName>RTR_Road_Permit</fullName>
    <active>true</active>
    <label>Road Permit</label>
</RecordType>