force-app/main/default/objects/RTR_Vehicle_Expenses__c/recordTypes/RTR_Service_Due.recordType-meta.xml
<RecordType>
    <fullName>RTR_Service_Due</fullName>
    <active>true</active>
    <label>Service Due</label>
</RecordType>