force-app/main/default/objects/RTR_Vehicle_Expenses__c/validationRules/RTR_Date_validation_VehicleExpences.validationRule-meta.xml
<ValidationRule>
    <fullName>RTR_Date_validation_VehicleExpences</fullName>
    <active>false</active>
    <errorConditionFormula>RTR_Date__c  &lt; TODAY()</errorConditionFormula>
    <errorDisplayField>RTR_Date__c</errorDisplayField>
    <errorMessage>Date must be today or in the future. Please select a valid date.</errorMessage>
</ValidationRule>