force-app/main/default/objects/RTR_Vehicle_Expenses__c/validationRules/RTR_Start_date_Ristrict_Past_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>RTR_Start_date_Ristrict_Past_Validation</fullName>
    <active>false</active>
    <errorConditionFormula>RTR_Start_Date__c   &lt; TODAY()</errorConditionFormula>
    <errorDisplayField>RTR_Start_Date__c</errorDisplayField>
    <errorMessage>Date must be today or in the future. Please select a valid date.</errorMessage>
</ValidationRule>