force-app/main/default/objects/RTR_Vehicle_Expenses__c/validationRules/RTR_start_date_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>RTR_start_date_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>RTR_Start_Date__c &gt;= RTR_End_Date__c</errorConditionFormula>
    <errorMessage>End Date should be greater than Start Date</errorMessage>
</ValidationRule>