force-app/main/default/objects/RTR_Vehicle_Expenses__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RTR_Vehicle_Name__c</columns>
    <columns>RTR_Amount__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>RTR_End_Date__c</columns>
    <columns>RTR_Next_due_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>