force-app/main/default/objects/RTR_Vehicle_Expenses__c/listViews/FC.listView-meta.xml
<ListView>
    <fullName>FC</fullName>
    <columns>NAME</columns>
    <columns>RTR_Vehicle_Name__c</columns>
    <columns>RTR_Date__c</columns>
    <columns>RTR_Receipt_Number__c</columns>
    <columns>RTR_Start_Date__c</columns>
    <columns>RTR_End_Date__c</columns>
    <columns>RTR_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>RTR_Vehicle_Expenses__c.RTR_Fitness_Certificate</value>
    </filters>
    <label>FC</label>
</ListView>