force-app/main/default/objects/RTR_Vehicle_Expenses__c/listViews/Fuel.listView-meta.xml
<ListView>
    <fullName>Fuel</fullName>
    <columns>NAME</columns>
    <columns>RTR_Vehicle_Name__c</columns>
    <columns>RTR_Date__c</columns>
    <columns>RTR_Quantity__c</columns>
    <columns>Kilometer_Reading__c</columns>
    <columns>RTR_Amount__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>RTR_Vehicle_Expenses__c.RTR_Fuel</value>
    </filters>
    <label>Fuel</label>
</ListView>