force-app/main/default/objects/RTR_Vehicle_Expenses__c/listViews/Insurance.listView-meta.xml
<ListView>
    <fullName>Insurance</fullName>
    <columns>NAME</columns>
    <columns>RTR_Vehicle_Name__c</columns>
    <columns>RTR_Insurance_Id__c</columns>
    <columns>RTR_Insurance_Company__c</columns>
    <columns>RTR_Policy_Issued_Date__c</columns>
    <columns>RTR_Start_Date__c</columns>
    <columns>RTR_End_Date__c</columns>
    <columns>RTR_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>RTR_Vehicle_Expenses__c.RTR_Insurance</value>
    </filters>
    <label>Insurance</label>
</ListView>