force-app/main/default/objects/RTR_Vehicle_Expenses__c/listViews/Repair_maintenance.listView-meta.xml
<ListView>
    <fullName>Repair_maintenance</fullName>
    <columns>NAME</columns>
    <columns>RTR_Vehicle_Name__c</columns>
    <columns>RTR_Date__c</columns>
    <columns>RTR_Vendor__c</columns>
    <columns>RTR_Type_of_Repair__c</columns>
    <columns>RTR_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>RTR_Vehicle_Expenses__c.RTR_Repair_and_maintenance</value>
    </filters>
    <label>Repair &amp; Maintenance</label>
</ListView>