force-app/main/default/objects/RTR_Vehicle_Expenses__c/listViews/Road.listView-meta.xml
<ListView>
    <fullName>Road</fullName>
    <columns>NAME</columns>
    <columns>RTR_Vehicle_Name__c</columns>
    <columns>RTR_PermitNumber__c</columns>
    <columns>RTR_Start_Date__c</columns>
    <columns>RTR_End_Date__c</columns>
    <columns>RTR_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>RTR_Vehicle_Expenses__c.RTR_Road_Permit</value>
    </filters>
    <label>Road Permit</label>
</ListView>