force-app/main/default/objects/RTR_Vehicle_Expenses__c/listViews/Road_Tax.listView-meta.xml
<ListView>
    <fullName>Road_Tax</fullName>
    <columns>NAME</columns>
    <columns>RTR_Start_Date__c</columns>
    <columns>RTR_Date__c</columns>
    <columns>RTR_Receipt_Number__c</columns>
    <columns>RTR_Amount__c</columns>
    <columns>RTR_Payment_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>RTR_Vehicle_Expenses__c.Road_Tax</value>
    </filters>
    <label>Road Tax</label>
</ListView>