force-app/main/default/objects/RTR_Vehicle_Expenses__c/listViews/Service.listView-meta.xml
<ListView>
    <fullName>Service</fullName>
    <columns>NAME</columns>
    <columns>RTR_Vehicle_Name__c</columns>
    <columns>RTR_Receipt_Number__c</columns>
    <columns>RTR_Vendor__c</columns>
    <columns>RTR_Next_due_Date__c</columns>
    <columns>RTR_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>RTR_Vehicle_Expenses__c.RTR_Service_Due</value>
    </filters>
    <label>Service Due</label>
</ListView>